--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,9 +14,15 @@
     "jade": "~1.11.0",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
+    "parts-of-speech": "^0.3.0",
+    "pos": "^0.4.2",
     "sequelize": "^6.3.3",
     "ws": "^7.3.1",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
   }
 }
