--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
-    "parts-of-speech": "^0.3.0",
     "pos": "^0.4.2",
     "pug": "^3.0.0",
     "sequelize": "^6.3.3",
-    "vorple": "^3.1.0",
+    "wink-pos-tagger": "^2.2.2",
     "ws": "^7.3.1",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.4.0"
