--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx mocha"
   },
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -16,6 +17,7 @@
     "pos": "^0.4.2",
     "pug": "^3.0.0",
     "sequelize": "^6.3.3",
+    "utf-8-validate": "^5.0.2",
     "wink-pos-tagger": "^2.2.2",
     "ws": "^7.3.1",
     "xterm": "^4.8.1",
